@@ -19,6 +19,6 @@ View stickies on a calendar here: <%= link_to SITE_URL, "#{SITE_URL}/stickies/ca
 <br />
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer<br />
+<%= DEFAULT_APP_NAME %> Mailer<br />
 <br />
 <%= @footer_html %>
