@@ -22,6 +22,6 @@ View stickies on a calendar here: <%= "#{SITE_URL}/stickies/calendar" %>
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
 
 <%= @footer_txt %>
