@@ -12,6 +12,6 @@ Additional Group Information
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
 
 <%= @footer_txt %>
