@@ -6,4 +6,4 @@ Please login <%= link_to "#{SITE_URL}/users/#{@user.id}/edit", "#{SITE_URL}/user
 <br />
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
