@@ -6,4 +6,4 @@ Please login <%= "#{SITE_URL}/users/#{@user.id}/edit" %> to approve or deny the 
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
