@@ -6,4 +6,4 @@ You can now login here: <%= link_to SITE_URL, SITE_URL %><br />
 <br />
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
