@@ -6,4 +6,4 @@ You can now login here: <%= SITE_URL %>
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
