@@ -6,6 +6,6 @@ Hello <%= @recipient.first_name %>,<br />
 
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer<br />
+<%= DEFAULT_APP_NAME %> Mailer<br />
 <br />
 <%= @footer_html %>
