@@ -12,6 +12,6 @@ Sticky <%= link_to @sticky.name, "#{SITE_URL}/stickies/#{@sticky.id}" %> on Proj
 <br />
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer<br />
+<%= DEFAULT_APP_NAME %> Mailer<br />
 <br />
 <%= @footer_html %>
