@@ -12,6 +12,6 @@ Sticky <%= @sticky.name %> <%= "#{SITE_URL}/stickies/#{@sticky.id}" %> on Projec
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
 
 <%= @footer_txt %>
