@@ -11,6 +11,6 @@ You may view the project and add comments to it!
 <br />
 Thank you!<br />
 <br />
-<%= DEFAULT_APP_NAME %> System Mailer<br />
+<%= DEFAULT_APP_NAME %> Mailer<br />
 <br />
 <%= @footer_html %>
