@@ -6,6 +6,6 @@ Hello <%= @project_user.user.first_name %>,
 
 Thank you!
 
-<%= DEFAULT_APP_NAME %> System Mailer
+<%= DEFAULT_APP_NAME %> Mailer
 
 <%= @footer_txt %>
