@@ -138,4 +138,15 @@ class UserMailerTest < ActionMailer::TestCase
     assert_match(/#{group.user.name} added Group #{group.name} #{SITE_URL}\/groups\/#{group.id} with #{group.stickies.size} #{group.stickies.size == 1 ? 'Sticky' : 'Stickies'}#{" from Template #{group.template.name}" if group.template}\./, email.encoded)
   end
 
+  test "daily digest email" do
+    valid = users(:valid)
+
+    email = UserMailer.daily_digest(valid).deliver
+    assert !ActionMailer::Base.deliveries.empty?
+
+    assert_equal [valid.email], email.to
+    assert_equal "Daily Digest for #{Date.today.strftime('%a %d %b %Y')}", email.subject
+    assert_match(/Hello #{valid.first_name},/, email.encoded)
+  end
+
 end
